# PLaiGROUND

./: .gitignore  00_random_agent.py  01_if_else_agent.py  Dockerfile  README.md  critic_input.txt  observer_input.txt  patch_library.py  planner_input.txt  pyproject.toml  requirements.txt  run_docker.sh  run_patches.py  test.py
data/: sample_recording.json
environments/: README.md
notebooks/: 00_data_exploration.ipynb  00_random_agent.ipynb  01_if_else_agent.ipynb  03_decision_tree.ipynb  04_random_forest.ipynb  05_linear_regression.ipynb  06_neural_networks.ipynb  deep_learning.ipynb
notebooks/.ipynb_checkpoints/: 00_random_agent-checkpoint.ipynb
patches/: godot_env.py  patch_libraries.py
scripts/: .config  00_data_exploration.py  00_random_agent.py  01_if_else_agent.py  02_llm_agent.py  02_planning_agent.py  02_record_gameplay.py  03_genetic_agent.py  03_llm_agent.py  utils.py
scripts/genetic_agent/: agent.py  config-feedforward
scripts/llm_agent/: agent.py  agent_plan copy.yml  agent_plan.yml  base_agent_plan.yml  prompts.py
scripts/planning_agent/: agent.py  agent_plan.yml
scripts/processing/: __init__.py  frame_visualizer.py  process_recordings.py  tools.py
scripts/wrappers/: godot_env.py  stable_baselines_wrapper.py  utils.py
src/: .config  00_data_exploration.py  00_random_agent.py  01_if_else_agent.py  03_decision_tree.py  04_random_forest.py  playground.py  utils.py
src/processing/: data_cleaning.py  feature_engineering.py  frame_visualizer.py  process_recordings.py  utils.py
src/wrappers/: stable_baselines_wrapper.py
(+14 files in other folders)
