[project]
name = "plaiground"
version = "0.1.0"
description = ""
authors = [
    {name = "Giani Statie"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stable-baselines3 (>=2.7.1,<3.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
